# vitrage-dashboard

./: .coveragerc  .gitignore  .gitreview  .jshintrc  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  bindep.txt  karma.conf.js  manage.py  openstack-common.conf  package.json  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/contributor/: index.rst
enabled/: _4000_project_vitrage_panel_group.py  _4020_project_alarms_vitrage_panel.py  _4110_admin_topology_vitrage_panel.py  _4120_admin_alarms_vitrage_panel.py  _90_project_topology_vitrage_panel.py  _92_project_entities_vitrage_panel.py  _93_project_template_vitrage_panel.py
releasenotes/notes/: add-del-template-b6592a2787e26239.yaml  alarm-banner-7aa616e3f8e69171.yaml  drop-py-2-7-53892de5b1c6cf5b.yaml  entities-graph-filtered-by-heat-stacks-4643b7bcf6737631.yaml  highlight-fc02111debe1e3f5.yaml  pin-all-eca759914ddd1429.yaml  reorganize-vendorized-static-files-dbe3cfdd7bc61243.yaml  search-entities-e0f9e21afd03815a.yaml  sunburst-enhancements-dd6126beed02ccb4.yaml  template-view-4f10a05c52680f75.yaml  template_panel_in_admin_section-133f1b0cc228fedc.yaml  vitrage-admin-menu-5fa73358a8559a37.yaml
releasenotes/source/: conf.py  index.rst  queens.rst  stein.rst
tools/: executable_files.txt  find_executables.sh
vitrage_dashboard/admin_alarms/: panel.py  urls.py  views.py
vitrage_dashboard/admin_alarms/templates/adminalarms/: index.html
vitrage_dashboard/admin_dashboard/: panel.py  urls.py  views.py
vitrage_dashboard/admin_dashboard/templates/admintopology/: index.html
vitrage_dashboard/admin_entities/: panel.py  urls.py  version.py  views.py
vitrage_dashboard/admin_entities/templates/adminentities/: index.html
vitrage_dashboard/admin_templates/: panel.py  urls.py  views.py
vitrage_dashboard/admin_templates/templates/admintemplates/: index.html
vitrage_dashboard/alarms/: panel.py  urls.py  version.py  views.py
vitrage_dashboard/alarms/templates/alarms/: banner.html  index.html
vitrage_dashboard/api/: vitrage.py  vitrage_rest_api.py
vitrage_dashboard/dashboard/: panel.py  urls.py  version.py
vitrage_dashboard/dashboard/static/dashboard/project/: vitrage.scss
vitrage_dashboard/dashboard/templates/topology/: index.html
vitrage_dashboard/dashboard/tests/: settings.py  test_vitragedashboard.py
vitrage_dashboard/dashboard/tests/integration/: horizon.conf  test_basic.py
vitrage_dashboard/enabled/: _4000_project_vitrage_panel_group.py  _4020_project_alarms_vitrage_panel.py  _4030_project_entities_vitrage_panel.py  _4040_project_template_vitrage_panel.py  _4100_admin_vitrage_panel_group.py  _4130_admin_entities_vitrage_panel.py  _4140_admin_template_vitrage_panel.py
vitrage_dashboard/entities/: panel.py  urls.py  views.py
vitrage_dashboard/entities/templates/entities/: index.html
vitrage_dashboard/templates/: __init__.py  panel.py  urls.py  views.py
vitragealarms/: __init__.py  urls.py
vitragealarms/templates/alarms/: index.html
vitrageclient/api/: __init__.py  vitrage.py
vitrageclient/api/rest/: __init__.py  vitrage.py
vitragedashboard/: __init__.py  urls.py  views.py
vitragedashboard/enabled/: _90_project_topology_vitrage_panel.py  _91_project_alarms_vitrage_panel.py  _92_project_entities_vitrage_panel.py  _93_project_template_vitrage_panel.py
vitragedashboard/locale/: django.pot
vitragedashboard/static/dashboard/project/: vitrage.css  vitrage.module.js  vitrage.scss
vitragedashboard/templates/topology/: index.html
vitragedashboard/tests/: test_vitragedashboard.py
vitrageentities/: __init__.py  panel.py  urls.py
vitrageentities/templates/entities/: index.html
vitragetemplates/: urls.py  version.py
vitragetemplates/templates/templates/: index.html
(+128 files in other folders)
