[metadata]
name = vitrage-dashboard
summary = Vitrage Horizon plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/vitrage-dashboard/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    vitrage_dashboard


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vitrage_dashboard/locale
domain = vitrage-dashboard

[update_catalog]
domain = vitrage-dashboard
output_dir = vitrage_dashboard/dashboard/locale
input_file = vitrage_dashboard/dashboard/locale/vitrage-dashboard.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vitrage_dashboard/dashboard/locale/vitrage-dashboard.pot
