[metadata]
name = vitrage-dashboard
summary = Vitrage Horizon plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/vitrage-dashboard/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8

[files]
packages =
    vitrage_dashboard

[compile_catalog]
directory = vitrage_dashboard/locale
domain = vitrage-dashboard

[update_catalog]
domain = vitrage-dashboard
output_dir = vitrage_dashboard/dashboard/locale
input_file = vitrage_dashboard/dashboard/locale/vitrage-dashboard.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vitrage_dashboard/dashboard/locale/vitrage-dashboard.pot
